# ChowPhaser

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  mac_builds.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml
.github/workflows/: auto-format.yml  cmake.yml
ChowPhaser/: CMakeLists.txt  ChowPhaserPlugin.cpp  ChowPhaserPlugin.h  FBSection.h  PhaseSection.h  gui.xml
SharedCode/: CMakeLists.txt  IIRFilter.h  TanhIIRFilter.h
installers/mac/: ChowPhaser.pkgproj  Intro.txt  build_mac_installer.sh
installers/windows/: ChowPhaser_Install_Script.iss  build_win_installer.sh
modules/: CMakeLists.txt
res/: CMakeLists.txt  gui.xml  stereo_gui.xml
sim/: ChowPhaser_Writeup.py  LDR.py  fb_section.py  mod_section.py
src/: CMakeLists.txt  ChowPhaserPlugin.cpp  ChowPhaserPlugin.h  ChowPhaserStereo.cpp  ChowPhaserStereo.h  FBSection.h  IIRFilter.h  LightMeter.h  MyLNF.h  PhaseSection.h  PluginBase.h  SingleChannelPhaser.cpp  SingleChannelPhaser.h  SliderLink.h  TanhIIRFilter.h  TooltipComp.cpp  TooltipComp.h  gui.xml
src/gui/: CMakeLists.txt  InfoComp.cpp  InfoComp.h  LightMeter.cpp  LightMeter.h  MyLNF.cpp  MyLNF.h  SliderLink.h  TitleComp.cpp  TitleComp.h  TooltipComp.cpp  TooltipComp.h
